...
    var body: some View {
        NavigationView {
            Form {
                Section {
                    VStack (alignment: .leading) {
                        Text ("Title:")
                        TextField ("name", text: $title)
                    }
                }
                Section {
                    Text ("Command")
                    TextEditor (text: $command)
                        .keyboardType(.asciiCapable)
...
                ToolbarItem (placement: .navigationBarLeading) {
                    Button ("Cancel") {
                        dismiss()
                    }
                }
                ToolbarItem (placement: .navigationBarTrailing) {
                    Button("Save") {
                        self.saveAndLeave ()
                    }
                    .disabled (!isValid)
                }
            }
            
...
