...
                .buttonStyle (.plain)
            }
        }
        .searchable(text: $searchText, placement: .navigationBarDrawer(displayMode: .always))
        .toolbar {
            ToolbarItem (placement: .navigationBarLeading) {
                Button ("Dismiss") {
                    dismiss()
                }
            }
        }
    }
    
...
