...
                            .background(Color (.systemGray5))
                            .cornerRadius(3)
                            .foregroundColor(Color (.systemGray))
                    })
                NavigationLink(
                    destination: LocalTerminalPage()
                        .navigationTitle ("Local Terminal")
                        .navigationBarTitleDisplayMode (.inline),
                    label: {
                        Label("Local Terminal", systemImage: "ipad.landscape")
                    })
                NavigationLink(
                    destination: KeyManagementView(),
...
